{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 2497,
  "lineage": "e64d7b06-2fff-599b-313d-b4c8dc77dbfc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "peer_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:052776272001:vpc/vpc-0c223439269250a1a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-00e158c680bd902b5",
            "default_route_table_id": "rtb-05f6bddc390c16b90",
            "default_security_group_id": "sg-09af8178cc9a19886",
            "dhcp_options_id": "dopt-54da832e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c223439269250a1a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05f6bddc390c16b90",
            "owner_id": "052776272001"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "peer_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:052776272001:vpc/vpc-0fc5800415ceaee0c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-09d0438199bfff42f",
            "default_route_table_id": "rtb-0f91b45acc0f2b47c",
            "default_security_group_id": "sg-0fa3ee350a0bd526d",
            "dhcp_options_id": "dopt-54da832e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0fc5800415ceaee0c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f91b45acc0f2b47c",
            "owner_id": "052776272001"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peer_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": false,
            "id": "pcx-03c5af270403a7861",
            "peer_owner_id": "052776272001",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0c223439269250a1a",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Side": "Requester"
            },
            "tags_all": {
              "Side": "Requester"
            },
            "vpc_id": "vpc-0c8c8cfd292a7d213"
          },
          "dependencies": [
            "aws_vpc.peer_dev",
            "data.aws_caller_identity.peer_dev",
            "module.jenkins.module.vpcjk.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peer_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": false,
            "id": "pcx-0fb5b95c47a34a1b9",
            "peer_owner_id": "052776272001",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0fc5800415ceaee0c",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Side": "Requester"
            },
            "tags_all": {
              "Side": "Requester"
            },
            "vpc_id": "vpc-0c8c8cfd292a7d213"
          },
          "dependencies": [
            "aws_vpc.peer_prod",
            "data.aws_caller_identity.peer_prod",
            "module.jenkins.module.vpcjk.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "peer_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-03c5af270403a7861",
            "peer_owner_id": "052776272001",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0c223439269250a1a",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Side": "Accepter"
            },
            "tags_all": {
              "Side": "Accepter"
            },
            "vpc_id": "vpc-0c8c8cfd292a7d213",
            "vpc_peering_connection_id": "pcx-03c5af270403a7861"
          },
          "dependencies": [
            "module.jenkins.module.vpcjk.aws_vpc.this",
            "aws_vpc.peer_dev",
            "aws_vpc_peering_connection.peer_dev",
            "data.aws_caller_identity.peer_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "peer_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0fb5b95c47a34a1b9",
            "peer_owner_id": "052776272001",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0fc5800415ceaee0c",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Side": "Accepter"
            },
            "tags_all": {
              "Side": "Accepter"
            },
            "vpc_id": "vpc-0c8c8cfd292a7d213",
            "vpc_peering_connection_id": "pcx-0fb5b95c47a34a1b9"
          },
          "dependencies": [
            "aws_vpc_peering_connection.peer_prod",
            "data.aws_caller_identity.peer_prod",
            "module.jenkins.module.vpcjk.aws_vpc.this",
            "aws_vpc.peer_prod"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-006d2bf4ef280788b",
            "description": "Security group that allows public inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "lb outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006d2bf4ef280788b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http ",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg-20210923122016093000000006",
            "name_prefix": "alb-sg-",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web Server",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Web Server",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1f164951a84f2d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev.module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "lb outbound",
            "from_port": 0,
            "id": "sgrule-3837086100",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-006d2bf4ef280788b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.alb.aws_security_group.this",
            "module.dev.module.alb.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "http ",
            "from_port": 80,
            "id": "sgrule-382283075",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-006d2bf4ef280788b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.alb.aws_security_group.this",
            "module.dev.module.alb.aws_security_group.this_name_prefix",
            "module.dev.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.app_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:052776272001:loadbalancer/app/alb-app-dev/75ab8ba1531c152e",
            "arn_suffix": "app/alb-app-dev/75ab8ba1531c152e",
            "dns_name": "alb-app-dev-1427786786.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:052776272001:loadbalancer/app/alb-app-dev/75ab8ba1531c152e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-app-dev",
            "security_groups": [
              "sg-06b3ea1fe275d54ca",
              "sg-0a3a1914d997e19f9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d5d925d0a3211413"
              },
              {
                "subnet_id": "subnet-0f50ee86fe32555dc"
              }
            ],
            "subnets": [
              "subnet-0d5d925d0a3211413",
              "subnet-0f50ee86fe32555dc"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "alb-app-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "alb-app-dev"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0f1f164951a84f2d8",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.dev.module.bastion.aws_security_group.bastion",
            "module.dev.module.vpc.aws_subnet.public",
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.dev.module.web.aws_security_group.this",
            "module.dev.module.web.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.app_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:052776272001:listener/app/alb-app-dev/75ab8ba1531c152e/e767ccf796255f8e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:052776272001:targetgroup/pref-20210923122015585100000005/fba54fb9ab367af8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:052776272001:listener/app/alb-app-dev/75ab8ba1531c152e/e767ccf796255f8e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:052776272001:loadbalancer/app/alb-app-dev/75ab8ba1531c152e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.web.aws_security_group.this_name_prefix",
            "module.dev.module.app_alb.aws_lb.this",
            "module.dev.module.app_alb.aws_lb_target_group.main",
            "module.dev.module.bastion.aws_security_group.bastion",
            "module.dev.module.vpc.aws_subnet.public",
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.dev.module.web.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.app_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:052776272001:targetgroup/pref-20210923122015585100000005/fba54fb9ab367af8",
            "arn_suffix": "targetgroup/pref-20210923122015585100000005/fba54fb9ab367af8",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:052776272001:targetgroup/pref-20210923122015585100000005/fba54fb9ab367af8",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "pref-20210923122015585100000005",
            "name_prefix": "pref-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "pref-"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "pref-"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0f1f164951a84f2d8"
          },
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev.module.autoscaling",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-0d25afb09ce32794d",
            "description": "Security group that allows public inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "autoscaling outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d25afb09ce32794d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http ",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-006d2bf4ef280788b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "autoscaling-sg-20210923122014890300000003",
            "name_prefix": "autoscaling-sg-",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Auto Scaling",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Auto Scaling",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1f164951a84f2d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev.module.autoscaling",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Ingress Rule",
            "from_port": 80,
            "id": "sgrule-4003168142",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d25afb09ce32794d",
            "self": false,
            "source_security_group_id": "sg-006d2bf4ef280788b",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.autoscaling.aws_security_group.this",
            "module.dev.module.autoscaling.aws_security_group.this_name_prefix",
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.alb.aws_security_group.this",
            "module.dev.module.alb.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.autoscaling",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "autoscaling outbound",
            "from_port": 0,
            "id": "sgrule-3627333349",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d25afb09ce32794d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.autoscaling.aws_security_group.this",
            "module.dev.module.autoscaling.aws_security_group.this_name_prefix",
            "module.dev.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.autoscaling",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ssh",
            "from_port": 22,
            "id": "sgrule-3820108082",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d25afb09ce32794d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.autoscaling.aws_security_group.this_name_prefix",
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.autoscaling.aws_security_group.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "http ",
            "from_port": 80,
            "id": "sgrule-1429759111",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d25afb09ce32794d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.autoscaling.aws_security_group.this",
            "module.dev.module.autoscaling.aws_security_group.this_name_prefix",
            "module.dev.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-0a3a1914d997e19f9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a3a1914d997e19f9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev--bastion-ssh-20210923122019250700000008",
            "name_prefix": "dev--bastion-ssh-",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": true,
            "tags": {
              "Name": "dev--bastion-ssh",
              "Project": "dev"
            },
            "tags_all": {
              "Name": "dev--bastion-ssh",
              "Project": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1f164951a84f2d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev.module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-0f976dc1aaa857533",
            "description": "Security group that allows public inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http ",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0f976dc1aaa857533",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.1.3.0/24"
                ],
                "description": "DB Connection",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06b3ea1fe275d54ca"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db-sg-20210923122016424600000007",
            "name_prefix": "db-sg-",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web Server",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Web Server",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1f164951a84f2d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev.module.db",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Ingress Rule",
            "from_port": 5432,
            "id": "sgrule-2023500896",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f976dc1aaa857533",
            "self": false,
            "source_security_group_id": "sg-06b3ea1fe275d54ca",
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.web.aws_security_group.this",
            "module.dev.module.web.aws_security_group.this_name_prefix",
            "module.dev.module.db.aws_security_group.this",
            "module.dev.module.db.aws_security_group.this_name_prefix",
            "module.dev.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.db",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "http ",
            "from_port": 80,
            "id": "sgrule-1107433185",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f976dc1aaa857533",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.db.aws_security_group.this",
            "module.dev.module.db.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "https",
            "from_port": 443,
            "id": "sgrule-1255645891",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f976dc1aaa857533",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.db.aws_security_group.this",
            "module.dev.module.db.aws_security_group.this_name_prefix",
            "module.dev.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.db",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.1.3.0/24"
            ],
            "description": "DB Connection",
            "from_port": -1,
            "id": "sgrule-553784437",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-0f976dc1aaa857533",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.db.aws_security_group.this",
            "module.dev.module.db.aws_security_group.this_name_prefix",
            "module.dev.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.1.0.0/16"
            ],
            "description": "ssh",
            "from_port": 22,
            "id": "sgrule-2461351545",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f976dc1aaa857533",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.db.aws_security_group.this",
            "module.dev.module.db.aws_security_group.this_name_prefix",
            "module.dev.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a90bfcf49307c6c8",
            "domain": "vpc",
            "id": "eipalloc-01dcc9035ec03227e",
            "network_border_group": "us-east-2",
            "network_interface": "eni-00a9ea1c8b1d58f6b",
            "private_dns": "ip-10-1-1-218.us-east-2.compute.internal",
            "private_ip": "10.1.1.218",
            "public_dns": "ec2-3-12-201-184.us-east-2.compute.amazonaws.com",
            "public_ip": "3.12.201.184",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-app-vpc-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-app-vpc-us-east-2a",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0ba600ff9f5e04c66",
            "domain": "vpc",
            "id": "eipalloc-0924060700efa75b7",
            "network_border_group": "us-east-2",
            "network_interface": "eni-05cb8e556e324746f",
            "private_dns": "ip-10-1-2-46.us-east-2.compute.internal",
            "private_ip": "10.1.2.46",
            "public_dns": "ec2-3-130-86-210.us-east-2.compute.amazonaws.com",
            "public_ip": "3.130.86.210",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-app-vpc-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-app-vpc-us-east-2b",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.dev.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:internet-gateway/igw-03b990b47a0a54ae6",
            "id": "igw-03b990b47a0a54ae6",
            "owner_id": "052776272001",
            "tags": {
              "Name": "dev-app-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-app-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f1f164951a84f2d8"
          },
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01dcc9035ec03227e",
            "connectivity_type": "public",
            "id": "nat-034bcbc61a1a99926",
            "network_interface_id": "eni-00a9ea1c8b1d58f6b",
            "private_ip": "10.1.1.218",
            "public_ip": "3.12.201.184",
            "subnet_id": "subnet-0f50ee86fe32555dc",
            "tags": {
              "Name": "dev-app-vpc-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-app-vpc-us-east-2a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.dev.module.vpc.aws_eip.nat",
            "module.dev.module.vpc.aws_internet_gateway.this",
            "module.dev.module.vpc.aws_subnet.public",
            "module.dev.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0924060700efa75b7",
            "connectivity_type": "public",
            "id": "nat-03afa4bc18bd9d204",
            "network_interface_id": "eni-05cb8e556e324746f",
            "private_ip": "10.1.2.46",
            "public_ip": "3.130.86.210",
            "subnet_id": "subnet-0d5d925d0a3211413",
            "tags": {
              "Name": "dev-app-vpc-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-app-vpc-us-east-2b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.dev.module.vpc.aws_internet_gateway.this",
            "module.dev.module.vpc.aws_subnet.public",
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.dev.module.vpc.aws_eip.nat"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fa56a7866ac6e3b11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-034bcbc61a1a99926",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fa56a7866ac6e3b1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.vpc.aws_nat_gateway.this",
            "module.dev.module.vpc.aws_route_table.private",
            "module.dev.module.vpc.aws_subnet.public",
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.dev.module.vpc.aws_eip.nat",
            "module.dev.module.vpc.aws_internet_gateway.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00034d2fcf832584c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03afa4bc18bd9d204",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00034d2fcf832584c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.dev.module.vpc.aws_eip.nat",
            "module.dev.module.vpc.aws_internet_gateway.this",
            "module.dev.module.vpc.aws_nat_gateway.this",
            "module.dev.module.vpc.aws_route_table.private",
            "module.dev.module.vpc.aws_subnet.public",
            "module.dev.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03b990b47a0a54ae6",
            "id": "r-rtb-0a2134b95016c16101080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a2134b95016c1610",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.dev.module.vpc.aws_internet_gateway.this",
            "module.dev.module.vpc.aws_route_table.public"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:route-table/rtb-0fa56a7866ac6e3b1",
            "id": "rtb-0fa56a7866ac6e3b1",
            "owner_id": "052776272001",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-034bcbc61a1a99926",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-app-vpc-private-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-app-vpc-private-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f1f164951a84f2d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:route-table/rtb-00034d2fcf832584c",
            "id": "rtb-00034d2fcf832584c",
            "owner_id": "052776272001",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03afa4bc18bd9d204",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-app-vpc-private-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-app-vpc-private-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f1f164951a84f2d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:route-table/rtb-0a2134b95016c1610",
            "id": "rtb-0a2134b95016c1610",
            "owner_id": "052776272001",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03b990b47a0a54ae6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-app-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-app-vpc-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f1f164951a84f2d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03adbb41b1d7b6756",
            "route_table_id": "rtb-0fa56a7866ac6e3b1",
            "subnet_id": "subnet-0c27e121fdbef0ec7"
          },
          "dependencies": [
            "module.dev.module.vpc.aws_route_table.private",
            "module.dev.module.vpc.aws_subnet.private",
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e4865bdcdcda296",
            "route_table_id": "rtb-00034d2fcf832584c",
            "subnet_id": "subnet-005c98bdf7f1216da"
          },
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.dev.module.vpc.aws_route_table.private",
            "module.dev.module.vpc.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0646df6cadcc094a1",
            "route_table_id": "rtb-0a2134b95016c1610",
            "subnet_id": "subnet-0f50ee86fe32555dc"
          },
          "dependencies": [
            "module.dev.module.vpc.aws_subnet.public",
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.dev.module.vpc.aws_route_table.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b22ce7dcaa1788a",
            "route_table_id": "rtb-0a2134b95016c1610",
            "subnet_id": "subnet-0d5d925d0a3211413"
          },
          "dependencies": [
            "module.dev.module.vpc.aws_route_table.public",
            "module.dev.module.vpc.aws_subnet.public",
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-0c27e121fdbef0ec7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-0c27e121fdbef0ec7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052776272001",
            "tags": {
              "Name": "dev-app-vpc-private-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-app-vpc-private-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f1f164951a84f2d8"
          },
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-005c98bdf7f1216da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.4.0/24",
            "id": "subnet-005c98bdf7f1216da",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052776272001",
            "tags": {
              "Name": "dev-app-vpc-private-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-app-vpc-private-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f1f164951a84f2d8"
          },
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-0f50ee86fe32555dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0f50ee86fe32555dc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "052776272001",
            "tags": {
              "Name": "dev-app-vpc-public-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-app-vpc-public-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f1f164951a84f2d8"
          },
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-0d5d925d0a3211413",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0d5d925d0a3211413",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "052776272001",
            "tags": {
              "Name": "dev-app-vpc-public-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-app-vpc-public-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f1f164951a84f2d8"
          },
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:vpc/vpc-0f1f164951a84f2d8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0b72ef7ce5110ea8d",
            "default_route_table_id": "rtb-032f720358b249ba4",
            "default_security_group_id": "sg-0109fb4b4380c0eac",
            "dhcp_options_id": "dopt-5513733e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f1f164951a84f2d8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-032f720358b249ba4",
            "owner_id": "052776272001",
            "tags": {
              "Name": "dev-app-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-app-vpc",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev.module.web",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-06b3ea1fe275d54ca",
            "description": "Security group that allows public inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "10.1.3.0/24"
                ],
                "description": "Egress Rule",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-06b3ea1fe275d54ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http ",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web-sg-20210923122015580200000004",
            "name_prefix": "web-sg-",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web Server",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Web Server",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1f164951a84f2d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev.module.web",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.1.3.0/24"
            ],
            "description": "Egress Rule",
            "from_port": 5432,
            "id": "sgrule-2557527620",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06b3ea1fe275d54ca",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5432,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.web.aws_security_group.this_name_prefix",
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.web.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.web",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "http ",
            "from_port": 80,
            "id": "sgrule-3822718646",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06b3ea1fe275d54ca",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.web.aws_security_group.this",
            "module.dev.module.web.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "https",
            "from_port": 443,
            "id": "sgrule-4077167889",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06b3ea1fe275d54ca",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.web.aws_security_group.this",
            "module.dev.module.web.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ssh",
            "from_port": 22,
            "id": "sgrule-1431327491",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06b3ea1fe275d54ca",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.web.aws_security_group.this",
            "module.dev.module.web.aws_security_group.this_name_prefix",
            "module.dev.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins.module.jenkins_master_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.jenkins.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-027b14706ebc79ad0",
            "description": "Security group that allows Jenkins master access only and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-027b14706ebc79ad0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "From internet default jenkins port",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "From internet https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "From internet ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "From internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "jenkins-master-sg-20210923122034634500000001",
            "name_prefix": "jenkins-master-sg-",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-master-sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-master-sg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c8c8cfd292a7d213"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins.module.vpcjk.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.jenkins.module.jenkins_master_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "module.jenkins.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Internet",
            "from_port": 0,
            "id": "sgrule-3087745129",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-027b14706ebc79ad0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins.module.jenkins_master_sg.aws_security_group.this",
            "module.jenkins.module.jenkins_master_sg.aws_security_group.this_name_prefix",
            "module.jenkins.module.vpcjk.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins.module.jenkins_master_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "module.jenkins.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "From internet",
            "from_port": 80,
            "id": "sgrule-974928324",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-027b14706ebc79ad0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins.module.jenkins_master_sg.aws_security_group.this",
            "module.jenkins.module.jenkins_master_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "From internet default jenkins port",
            "from_port": 8080,
            "id": "sgrule-668159797",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-027b14706ebc79ad0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins.module.jenkins_master_sg.aws_security_group.this",
            "module.jenkins.module.jenkins_master_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "From internet https",
            "from_port": 443,
            "id": "sgrule-1454424748",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-027b14706ebc79ad0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins.module.jenkins_master_sg.aws_security_group.this",
            "module.jenkins.module.jenkins_master_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "From internet ssh",
            "from_port": 22,
            "id": "sgrule-2358666353",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-027b14706ebc79ad0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins.module.jenkins_master_sg.aws_security_group.this",
            "module.jenkins.module.jenkins_master_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins.module.jenkins_slaves_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.jenkins.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-0c369a99a749223e4",
            "description": "Security group that allows Jenkins master subnet access (for monitoring later) and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c369a99a749223e4",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.4.0/24"
                ],
                "description": "From the office only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.4.0/24"
                ],
                "description": "JNLP from Jenkins master",
                "from_port": 49187,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 49187
              }
            ],
            "name": "jenkins-slaves-sg-20210923122035422500000002",
            "name_prefix": "jenkins-slaves-sg-",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-slaves-sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-slaves-sg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c8c8cfd292a7d213"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins.module.vpcjk.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.jenkins.module.jenkins_slaves_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "module.jenkins.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Internet",
            "from_port": 0,
            "id": "sgrule-866896104",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c369a99a749223e4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins.module.jenkins_slaves_sg.aws_security_group.this",
            "module.jenkins.module.jenkins_slaves_sg.aws_security_group.this_name_prefix",
            "module.jenkins.module.vpcjk.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins.module.jenkins_slaves_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "module.jenkins.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.4.0/24"
            ],
            "description": "SSH from jenkins Master",
            "from_port": 22,
            "id": "sgrule-1668476494",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c369a99a749223e4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins.module.jenkins_slaves_sg.aws_security_group.this",
            "module.jenkins.module.jenkins_slaves_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.4.0/24"
            ],
            "description": "JNLP from Jenkins master",
            "from_port": 49187,
            "id": "sgrule-2260904550",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c369a99a749223e4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 49187,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins.module.jenkins_slaves_sg.aws_security_group.this",
            "module.jenkins.module.jenkins_slaves_sg.aws_security_group.this_name_prefix",
            "module.jenkins.module.vpcjk.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins.module.jmaster_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "module.jenkins.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01685d240b8fbbfeb",
            "arn": "arn:aws:ec2:us-east-2:052776272001:instance/i-0d49835e3d13a93ef",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d49835e3d13a93ef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vieskovtf",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0ba94cd3a1ffc78ba",
            "private_dns": "ip-10-0-2-217.us-east-2.compute.internal",
            "private_ip": "10.0.2.217",
            "public_dns": "ec2-18-117-83-83.us-east-2.compute.amazonaws.com",
            "public_ip": "18.117.83.83",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06681c176b97a427b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09dd4ff06260655d5",
            "tags": {
              "Environment": "jenkins-master",
              "Name": "jenkins-master",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "jenkins-master",
              "Name": "jenkins-master",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "jenkins-master"
            },
            "vpc_security_group_ids": [
              "sg-027b14706ebc79ad0"
            ]
          },
          "dependencies": [
            "module.jenkins.module.jenkins_master_sg.aws_security_group.this",
            "module.jenkins.module.jenkins_master_sg.aws_security_group.this_name_prefix",
            "module.jenkins.module.vpcjk.aws_subnet.public",
            "module.jenkins.module.vpcjk.aws_vpc.this",
            "module.jenkins.module.vpcjk.aws_vpc_ipv4_cidr_block_association.this",
            "module.jenkins.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins.module.jslave_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "module.jenkins.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01685d240b8fbbfeb",
            "arn": "arn:aws:ec2:us-east-2:052776272001:instance/i-04ad2c387515babf6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04ad2c387515babf6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vieskovtf",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0f10cf03e3bfb807c",
            "private_dns": "ip-10-0-4-159.us-east-2.compute.internal",
            "private_ip": "10.0.4.159",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-072997335ec6cc59c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01f4785f5caf90f5c",
            "tags": {
              "Environment": "jenkins-slave",
              "Name": "jenkins-slave",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "jenkins-slave",
              "Name": "jenkins-slave",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "jenkins-slave"
            },
            "vpc_security_group_ids": [
              "sg-027b14706ebc79ad0"
            ]
          },
          "dependencies": [
            "module.jenkins.data.aws_ami.ubuntu",
            "module.jenkins.module.jenkins_master_sg.aws_security_group.this",
            "module.jenkins.module.jenkins_master_sg.aws_security_group.this_name_prefix",
            "module.jenkins.module.vpcjk.aws_subnet.private",
            "module.jenkins.module.vpcjk.aws_vpc.this",
            "module.jenkins.module.vpcjk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins.module.vpcjk",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.jenkins.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-01df3a3a6c60d548e",
            "domain": "vpc",
            "id": "eipalloc-05a24c77a7bc50aba",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0fd7a1e04908e3bb5",
            "private_dns": "ip-10-0-1-155.us-east-2.compute.internal",
            "private_ip": "10.0.1.155",
            "public_dns": "ec2-3-139-26-84.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.26.84",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "jenkins-vpc-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-vpc-us-east-2a",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.jenkins.module.vpcjk",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.jenkins.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:internet-gateway/igw-0b9bd6bdf5d0fb4f6",
            "id": "igw-0b9bd6bdf5d0fb4f6",
            "owner_id": "052776272001",
            "tags": {
              "Name": "jenkins-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c8c8cfd292a7d213"
          },
          "dependencies": [
            "module.jenkins.module.vpcjk.aws_vpc_ipv4_cidr_block_association.this",
            "module.jenkins.module.vpcjk.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins.module.vpcjk",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.jenkins.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05a24c77a7bc50aba",
            "connectivity_type": "public",
            "id": "nat-0a241de2cdec86046",
            "network_interface_id": "eni-0fd7a1e04908e3bb5",
            "private_ip": "10.0.1.155",
            "public_ip": "3.139.26.84",
            "subnet_id": "subnet-03053182519e900e3",
            "tags": {
              "Name": "jenkins-vpc-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-vpc-us-east-2a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.jenkins.module.vpcjk.aws_internet_gateway.this",
            "module.jenkins.module.vpcjk.aws_subnet.public",
            "module.jenkins.module.vpcjk.aws_vpc.this",
            "module.jenkins.module.vpcjk.aws_vpc_ipv4_cidr_block_association.this",
            "module.jenkins.module.vpcjk.aws_eip.nat"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins.module.vpcjk",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.jenkins.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a70f2e58f51603331080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a241de2cdec86046",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a70f2e58f5160333",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins.module.vpcjk.aws_subnet.public",
            "module.jenkins.module.vpcjk.aws_vpc.this",
            "module.jenkins.module.vpcjk.aws_vpc_ipv4_cidr_block_association.this",
            "module.jenkins.module.vpcjk.aws_eip.nat",
            "module.jenkins.module.vpcjk.aws_internet_gateway.this",
            "module.jenkins.module.vpcjk.aws_nat_gateway.this",
            "module.jenkins.module.vpcjk.aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins.module.vpcjk",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.jenkins.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b9bd6bdf5d0fb4f6",
            "id": "r-rtb-01220d8c3d146317e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01220d8c3d146317e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins.module.vpcjk.aws_internet_gateway.this",
            "module.jenkins.module.vpcjk.aws_route_table.public",
            "module.jenkins.module.vpcjk.aws_vpc.this",
            "module.jenkins.module.vpcjk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins.module.vpcjk",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.jenkins.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:route-table/rtb-0a70f2e58f5160333",
            "id": "rtb-0a70f2e58f5160333",
            "owner_id": "052776272001",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a241de2cdec86046",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jenkins-vpc-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-vpc-private",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c8c8cfd292a7d213"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins.module.vpcjk.aws_vpc.this",
            "module.jenkins.module.vpcjk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins.module.vpcjk",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.jenkins.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:route-table/rtb-01220d8c3d146317e",
            "id": "rtb-01220d8c3d146317e",
            "owner_id": "052776272001",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b9bd6bdf5d0fb4f6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jenkins-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-vpc-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c8c8cfd292a7d213"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins.module.vpcjk.aws_vpc_ipv4_cidr_block_association.this",
            "module.jenkins.module.vpcjk.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins.module.vpcjk",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.jenkins.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3585b67c235c060",
            "route_table_id": "rtb-0a70f2e58f5160333",
            "subnet_id": "subnet-0c60286cc0d7400dc"
          },
          "dependencies": [
            "module.jenkins.module.vpcjk.aws_route_table.private",
            "module.jenkins.module.vpcjk.aws_subnet.private",
            "module.jenkins.module.vpcjk.aws_vpc.this",
            "module.jenkins.module.vpcjk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed18e30af05399f5",
            "route_table_id": "rtb-0a70f2e58f5160333",
            "subnet_id": "subnet-01f4785f5caf90f5c"
          },
          "dependencies": [
            "module.jenkins.module.vpcjk.aws_vpc_ipv4_cidr_block_association.this",
            "module.jenkins.module.vpcjk.aws_route_table.private",
            "module.jenkins.module.vpcjk.aws_subnet.private",
            "module.jenkins.module.vpcjk.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins.module.vpcjk",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.jenkins.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4b4ab01a241809f",
            "route_table_id": "rtb-01220d8c3d146317e",
            "subnet_id": "subnet-03053182519e900e3"
          },
          "dependencies": [
            "module.jenkins.module.vpcjk.aws_route_table.public",
            "module.jenkins.module.vpcjk.aws_subnet.public",
            "module.jenkins.module.vpcjk.aws_vpc.this",
            "module.jenkins.module.vpcjk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bee5151a5a16b410",
            "route_table_id": "rtb-01220d8c3d146317e",
            "subnet_id": "subnet-09dd4ff06260655d5"
          },
          "dependencies": [
            "module.jenkins.module.vpcjk.aws_vpc.this",
            "module.jenkins.module.vpcjk.aws_vpc_ipv4_cidr_block_association.this",
            "module.jenkins.module.vpcjk.aws_route_table.public",
            "module.jenkins.module.vpcjk.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins.module.vpcjk",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.jenkins.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-0c60286cc0d7400dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0c60286cc0d7400dc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052776272001",
            "tags": {
              "Name": "jenkins-vpc-private-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-vpc-private-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c8c8cfd292a7d213"
          },
          "dependencies": [
            "module.jenkins.module.vpcjk.aws_vpc.this",
            "module.jenkins.module.vpcjk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-01f4785f5caf90f5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-01f4785f5caf90f5c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052776272001",
            "tags": {
              "Name": "jenkins-vpc-private-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-vpc-private-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c8c8cfd292a7d213"
          },
          "dependencies": [
            "module.jenkins.module.vpcjk.aws_vpc.this",
            "module.jenkins.module.vpcjk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins.module.vpcjk",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.jenkins.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-03053182519e900e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-03053182519e900e3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "052776272001",
            "tags": {
              "Name": "jenkins-vpc-public-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-vpc-public-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c8c8cfd292a7d213"
          },
          "dependencies": [
            "module.jenkins.module.vpcjk.aws_vpc.this",
            "module.jenkins.module.vpcjk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-09dd4ff06260655d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-09dd4ff06260655d5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "052776272001",
            "tags": {
              "Name": "jenkins-vpc-public-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-vpc-public-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c8c8cfd292a7d213"
          },
          "dependencies": [
            "module.jenkins.module.vpcjk.aws_vpc.this",
            "module.jenkins.module.vpcjk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins.module.vpcjk",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.jenkins.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:vpc/vpc-0c8c8cfd292a7d213",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cc4d4d0096b614a5",
            "default_route_table_id": "rtb-01ed5d387028cf2d8",
            "default_security_group_id": "sg-0647125824912e351",
            "dhcp_options_id": "dopt-5513733e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c8c8cfd292a7d213",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01ed5d387028cf2d8",
            "owner_id": "052776272001",
            "tags": {
              "Name": "jenkins-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-vpc",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod.module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-055300ac1ca000435",
            "description": "Security group that allows public inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "lb outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-055300ac1ca000435",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http ",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg-20210923122004158800000006",
            "name_prefix": "alb-sg-",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web Server",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Web Server",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4e65ddb4958a854"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod.module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "lb outbound",
            "from_port": 0,
            "id": "sgrule-2241936226",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-055300ac1ca000435",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.alb.aws_security_group.this",
            "module.prod.module.alb.aws_security_group.this_name_prefix",
            "module.prod.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "http ",
            "from_port": 80,
            "id": "sgrule-1747972092",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-055300ac1ca000435",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.alb.aws_security_group.this",
            "module.prod.module.alb.aws_security_group.this_name_prefix",
            "module.prod.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.app_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:052776272001:loadbalancer/app/alb-app-prod/e351c536cf99bc56",
            "arn_suffix": "app/alb-app-prod/e351c536cf99bc56",
            "dns_name": "alb-app-prod-1131439924.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:052776272001:loadbalancer/app/alb-app-prod/e351c536cf99bc56",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-app-prod",
            "security_groups": [
              "sg-098811d5315a0d8b4",
              "sg-0ca23f94fd4402b4a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-019eed0f999f6a370"
              },
              {
                "subnet_id": "subnet-0fcc62302f66490ce"
              }
            ],
            "subnets": [
              "subnet-019eed0f999f6a370",
              "subnet-0fcc62302f66490ce"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "alb-app-prod"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "alb-app-prod"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0c4e65ddb4958a854",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.prod.module.web.aws_security_group.this_name_prefix",
            "module.prod.module.bastion.aws_security_group.bastion",
            "module.prod.module.vpc.aws_subnet.public",
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.prod.module.web.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.app_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:052776272001:listener/app/alb-app-prod/e351c536cf99bc56/59c6990292a291fa",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:052776272001:targetgroup/pref-20210923122005037000000007/910d2422f5a448b3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:052776272001:listener/app/alb-app-prod/e351c536cf99bc56/59c6990292a291fa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:052776272001:loadbalancer/app/alb-app-prod/e351c536cf99bc56",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Environment": "prod"
            },
            "tags_all": {
              "Environment": "prod"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.prod.module.web.aws_security_group.this",
            "module.prod.module.web.aws_security_group.this_name_prefix",
            "module.prod.module.app_alb.aws_lb.this",
            "module.prod.module.app_alb.aws_lb_target_group.main",
            "module.prod.module.bastion.aws_security_group.bastion",
            "module.prod.module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.app_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:052776272001:targetgroup/pref-20210923122005037000000007/910d2422f5a448b3",
            "arn_suffix": "targetgroup/pref-20210923122005037000000007/910d2422f5a448b3",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:052776272001:targetgroup/pref-20210923122005037000000007/910d2422f5a448b3",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "pref-20210923122005037000000007",
            "name_prefix": "pref-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "pref-"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "pref-"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0c4e65ddb4958a854"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod.module.autoscaling",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-0ce7ab9eda4568477",
            "description": "Security group that allows public inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "autoscaling outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce7ab9eda4568477",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http ",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-055300ac1ca000435"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "autoscaling-sg-20210923122004009000000004",
            "name_prefix": "autoscaling-sg-",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Auto Scaling",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Auto Scaling",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4e65ddb4958a854"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod.module.autoscaling",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Ingress Rule",
            "from_port": 80,
            "id": "sgrule-3351536049",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ce7ab9eda4568477",
            "self": false,
            "source_security_group_id": "sg-055300ac1ca000435",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.alb.aws_security_group.this",
            "module.prod.module.alb.aws_security_group.this_name_prefix",
            "module.prod.module.autoscaling.aws_security_group.this",
            "module.prod.module.autoscaling.aws_security_group.this_name_prefix",
            "module.prod.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.autoscaling",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "autoscaling outbound",
            "from_port": 0,
            "id": "sgrule-620796573",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ce7ab9eda4568477",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.autoscaling.aws_security_group.this",
            "module.prod.module.autoscaling.aws_security_group.this_name_prefix",
            "module.prod.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.autoscaling",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ssh",
            "from_port": 22,
            "id": "sgrule-3142922664",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ce7ab9eda4568477",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.autoscaling.aws_security_group.this",
            "module.prod.module.autoscaling.aws_security_group.this_name_prefix",
            "module.prod.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "http ",
            "from_port": 80,
            "id": "sgrule-232746013",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ce7ab9eda4568477",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.autoscaling.aws_security_group.this",
            "module.prod.module.autoscaling.aws_security_group.this_name_prefix",
            "module.prod.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-0ca23f94fd4402b4a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca23f94fd4402b4a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "prod--bastion-ssh-20210923122003790000000003",
            "name_prefix": "prod--bastion-ssh-",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": true,
            "tags": {
              "Name": "prod--bastion-ssh",
              "Project": "prod"
            },
            "tags_all": {
              "Name": "prod--bastion-ssh",
              "Project": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4e65ddb4958a854"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod.module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-082ed26c7ef1d1f6b",
            "description": "Security group that allows public inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http ",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-082ed26c7ef1d1f6b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.2.7.0/24"
                ],
                "description": "DB Connection",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-098811d5315a0d8b4"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db-sg-20210923122005483500000008",
            "name_prefix": "db-sg-",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web Server",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Web Server",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4e65ddb4958a854"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod.module.db",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Ingress Rule",
            "from_port": 5432,
            "id": "sgrule-2316157651",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-082ed26c7ef1d1f6b",
            "self": false,
            "source_security_group_id": "sg-098811d5315a0d8b4",
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.db.aws_security_group.this",
            "module.prod.module.db.aws_security_group.this_name_prefix",
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.web.aws_security_group.this",
            "module.prod.module.web.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.db",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "http ",
            "from_port": 80,
            "id": "sgrule-747259671",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-082ed26c7ef1d1f6b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.db.aws_security_group.this",
            "module.prod.module.db.aws_security_group.this_name_prefix",
            "module.prod.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "https",
            "from_port": 443,
            "id": "sgrule-341699346",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-082ed26c7ef1d1f6b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.db.aws_security_group.this",
            "module.prod.module.db.aws_security_group.this_name_prefix",
            "module.prod.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.db",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.2.7.0/24"
            ],
            "description": "DB Connection",
            "from_port": -1,
            "id": "sgrule-3638200619",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-082ed26c7ef1d1f6b",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.db.aws_security_group.this",
            "module.prod.module.db.aws_security_group.this_name_prefix",
            "module.prod.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.2.0.0/16"
            ],
            "description": "ssh",
            "from_port": 22,
            "id": "sgrule-1521642167",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-082ed26c7ef1d1f6b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.db.aws_security_group.this",
            "module.prod.module.db.aws_security_group.this_name_prefix",
            "module.prod.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-007b128c3f53cc13b",
            "domain": "vpc",
            "id": "eipalloc-0edb82448f43d4c92",
            "network_border_group": "us-east-2",
            "network_interface": "eni-05c77c3c71678a969",
            "private_dns": "ip-10-2-5-71.us-east-2.compute.internal",
            "private_ip": "10.2.5.71",
            "public_dns": "ec2-3-15-248-40.us-east-2.compute.amazonaws.com",
            "public_ip": "3.15.248.40",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prod-app-vpc-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "prod-app-vpc-us-east-2a",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-074cad8cce7c2077a",
            "domain": "vpc",
            "id": "eipalloc-05e3b0bdf64886aca",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0fa8109e665316797",
            "private_dns": "ip-10-2-6-47.us-east-2.compute.internal",
            "private_ip": "10.2.6.47",
            "public_dns": "ec2-13-59-200-242.us-east-2.compute.amazonaws.com",
            "public_ip": "13.59.200.242",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prod-app-vpc-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "prod-app-vpc-us-east-2b",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:internet-gateway/igw-05ad311763582065d",
            "id": "igw-05ad311763582065d",
            "owner_id": "052776272001",
            "tags": {
              "Name": "prod-app-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "prod-app-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c4e65ddb4958a854"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0edb82448f43d4c92",
            "connectivity_type": "public",
            "id": "nat-05bc7f38c544e7d3a",
            "network_interface_id": "eni-05c77c3c71678a969",
            "private_ip": "10.2.5.71",
            "public_ip": "3.15.248.40",
            "subnet_id": "subnet-019eed0f999f6a370",
            "tags": {
              "Name": "prod-app-vpc-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "prod-app-vpc-us-east-2a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.prod.module.vpc.aws_eip.nat",
            "module.prod.module.vpc.aws_internet_gateway.this",
            "module.prod.module.vpc.aws_subnet.public",
            "module.prod.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e3b0bdf64886aca",
            "connectivity_type": "public",
            "id": "nat-029fa5af22626038e",
            "network_interface_id": "eni-0fa8109e665316797",
            "private_ip": "10.2.6.47",
            "public_ip": "13.59.200.242",
            "subnet_id": "subnet-0fcc62302f66490ce",
            "tags": {
              "Name": "prod-app-vpc-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "prod-app-vpc-us-east-2b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.prod.module.vpc.aws_subnet.public",
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.prod.module.vpc.aws_eip.nat",
            "module.prod.module.vpc.aws_internet_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0eb826e9074b950e41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05bc7f38c544e7d3a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0eb826e9074b950e4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.prod.module.vpc.aws_eip.nat",
            "module.prod.module.vpc.aws_internet_gateway.this",
            "module.prod.module.vpc.aws_nat_gateway.this",
            "module.prod.module.vpc.aws_route_table.private",
            "module.prod.module.vpc.aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d674aa732307022d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-029fa5af22626038e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d674aa732307022d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.vpc.aws_eip.nat",
            "module.prod.module.vpc.aws_internet_gateway.this",
            "module.prod.module.vpc.aws_nat_gateway.this",
            "module.prod.module.vpc.aws_route_table.private",
            "module.prod.module.vpc.aws_subnet.public",
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05ad311763582065d",
            "id": "r-rtb-07cc5193d03a981f21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07cc5193d03a981f2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.vpc.aws_route_table.public",
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.prod.module.vpc.aws_internet_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:route-table/rtb-0eb826e9074b950e4",
            "id": "rtb-0eb826e9074b950e4",
            "owner_id": "052776272001",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05bc7f38c544e7d3a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-app-vpc-private-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "prod-app-vpc-private-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c4e65ddb4958a854"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:route-table/rtb-0d674aa732307022d",
            "id": "rtb-0d674aa732307022d",
            "owner_id": "052776272001",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-029fa5af22626038e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-app-vpc-private-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "prod-app-vpc-private-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c4e65ddb4958a854"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:route-table/rtb-07cc5193d03a981f2",
            "id": "rtb-07cc5193d03a981f2",
            "owner_id": "052776272001",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05ad311763582065d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-app-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "prod-app-vpc-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c4e65ddb4958a854"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0910b4077bf859981",
            "route_table_id": "rtb-0eb826e9074b950e4",
            "subnet_id": "subnet-0ae8353d66d5c8204"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.prod.module.vpc.aws_route_table.private",
            "module.prod.module.vpc.aws_subnet.private",
            "module.prod.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a468ed3703962c7c",
            "route_table_id": "rtb-0d674aa732307022d",
            "subnet_id": "subnet-096d41a30b415bc89"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_route_table.private",
            "module.prod.module.vpc.aws_subnet.private",
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef0c03b6be03cc6c",
            "route_table_id": "rtb-07cc5193d03a981f2",
            "subnet_id": "subnet-019eed0f999f6a370"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_route_table.public",
            "module.prod.module.vpc.aws_subnet.public",
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041bb40996111efd2",
            "route_table_id": "rtb-07cc5193d03a981f2",
            "subnet_id": "subnet-0fcc62302f66490ce"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_route_table.public",
            "module.prod.module.vpc.aws_subnet.public",
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-0ae8353d66d5c8204",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.2.7.0/24",
            "id": "subnet-0ae8353d66d5c8204",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052776272001",
            "tags": {
              "Name": "prod-app-vpc-private-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "prod-app-vpc-private-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c4e65ddb4958a854"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-096d41a30b415bc89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.2.8.0/24",
            "id": "subnet-096d41a30b415bc89",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052776272001",
            "tags": {
              "Name": "prod-app-vpc-private-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "prod-app-vpc-private-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c4e65ddb4958a854"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-019eed0f999f6a370",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.2.5.0/24",
            "id": "subnet-019eed0f999f6a370",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "052776272001",
            "tags": {
              "Name": "prod-app-vpc-public-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "prod-app-vpc-public-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c4e65ddb4958a854"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.prod.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-0fcc62302f66490ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.2.6.0/24",
            "id": "subnet-0fcc62302f66490ce",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "052776272001",
            "tags": {
              "Name": "prod-app-vpc-public-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "prod-app-vpc-public-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c4e65ddb4958a854"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:vpc/vpc-0c4e65ddb4958a854",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-06889be2602e5ea9a",
            "default_route_table_id": "rtb-06fcf29c1641713e0",
            "default_security_group_id": "sg-057b17ff3a92c21a5",
            "dhcp_options_id": "dopt-5513733e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c4e65ddb4958a854",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06fcf29c1641713e0",
            "owner_id": "052776272001",
            "tags": {
              "Name": "prod-app-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "prod-app-vpc",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod.module.web",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-098811d5315a0d8b4",
            "description": "Security group that allows public inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "10.2.7.0/24"
                ],
                "description": "Egress Rule",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-098811d5315a0d8b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http ",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web-sg-20210923122004154700000005",
            "name_prefix": "web-sg-",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web Server",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Web Server",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4e65ddb4958a854"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod.module.web",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.2.7.0/24"
            ],
            "description": "Egress Rule",
            "from_port": 5432,
            "id": "sgrule-3245757720",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-098811d5315a0d8b4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5432,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.web.aws_security_group.this",
            "module.prod.module.web.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.web",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "http ",
            "from_port": 80,
            "id": "sgrule-2209714767",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-098811d5315a0d8b4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.web.aws_security_group.this",
            "module.prod.module.web.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "https",
            "from_port": 443,
            "id": "sgrule-3485679845",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-098811d5315a0d8b4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.web.aws_security_group.this",
            "module.prod.module.web.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ssh",
            "from_port": 22,
            "id": "sgrule-893374458",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-098811d5315a0d8b4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.web.aws_security_group.this",
            "module.prod.module.web.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}